# MRAGAgent

./: .dockerignore  .env.example  .gitignore  Agents.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/adapters/: min_adapter.py
app/api/: chat.py
app/core/: metrics.py  progress.py  retry.py  runtime_flags.py  settings.py  url_safety.py
app/integrations/: bridge_settings.py  image_pipeline_bridge.py  raganything_bridge.py  rankllm_bridge.py  rasa_parse_bridge.py
app/models/: schemas.py
app/services/: clarification.py  connectors.py  dispatcher.py  image_query_parser.py  image_search_vlm_answer.py  llm_json_client.py  memory_client.py  parser_cache.py  query_optimizer.py  query_planner.py  qwen_vlm_images.py  rag_client.py  rasa_client.py
docs/architecture/: chapter5-authoritative-eval-results.json  chapter5-authoritative-eval-sections.md  chapter5-benchmark-eval-results.json  chapter5-benchmark-eval-sections.md  chapter5-eval-results.json  chapter5-fusion-eval-results.json  chapter5-fusion-eval-sections.md  graduation-chapter-2-scheme-demonstration.md  (+16 more)
rasa_project/: config.yml  domain.yml
scripts/: capture_chapter5_browser_screenshots.py  capture_frontend_real_examples.py  check_stack_health.ps1  run_chapter5_authoritative_eval.py  run_chapter5_benchmark_eval.py  run_chapter5_eval.py  run_chapter5_fusion_eval.py  start_all_stack.ps1  start_crawl4ai_docker.ps1  start_image_pipeline.ps1  start_raganything_bridge.ps1  start_rankllm_http.ps1  start_rasa_parse.ps1
tests/: test_chat_api.py
web/: index.html
(+3 files in other folders)
