[project]
name = "multimodal-rag-agent"
version = "0.1.0"
description = "Intent-driven multimodal RAG orchestrator with minimal adapter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "redis>=5.0.0",
    "aiomysql>=0.2.0",
    "crawl4ai",
    "torch",
    "transformers>=4.41.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["third_party", "models", "raganything_storage", "tmp"]
